# simple-footie

./: .gitignore  Cargo.toml  Makefile  README.md  simple-footie-server  simple-footie-tui
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  backend.md  effort-estimation.md  features.md
engine/: Cargo.toml
engine/src/: commands.rs  database.rs  lib.rs  match_store.rs  player.rs  simulation.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: http_bridge.rs  main.rs  metrics.rs  network.rs  persistence.rs  simulation_core.rs  token.rs
tui/: Cargo.toml
tui/src/: main.rs  server_client.rs
