[workspace]
members = [
    "engine",
    "protocol",
    "server",
    "tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["M Ahmad Mujtaba"]
license = "MIT"
description = "A football management simulation engine in Rust"
repository = "https://github.com/mahmadmujtaba/simple-footie"
